// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for variant: error, compact: false, isFocusable: true and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: var(--_p-legacy-radius-small, calc(4px + (calc(6px + 2.125ex) / 2)));
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  color: var(--p-color-primary);
  background: var(--p-color-error-frosted);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), backdrop-filter var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media (forced-colors: active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  span:hover {
    background: var(--p-color-error-frosted-soft);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: info, compact: true, isFocusable: false and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 1px 6px;
  border-radius: var(--_p-legacy-radius-small, calc(1px + (calc(6px + 2.125ex) / 2)));
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  color: var(--p-color-primary);
  background: var(--p-color-info-frosted);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), backdrop-filter var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media (forced-colors: active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: primary, compact: false, isFocusable: true and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: var(--_p-legacy-radius-small, calc(4px + (calc(6px + 2.125ex) / 2)));
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  color: var(--p-color-canvas);
  background: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), backdrop-filter var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media (forced-colors: active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  span:hover {
    background: var(--p-color-contrast-high);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: secondary, compact: false, isFocusable: false and hasIcon: true 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: var(--_p-legacy-radius-small, calc(4px + (calc(6px + 2.125ex) / 2)));
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  color: var(--p-color-primary);
  background: var(--p-color-frosted-strong);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), backdrop-filter var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media (forced-colors: active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() > should return correct css for variant: warning, compact: true, isFocusable: false and hasIcon: false 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 1px 6px;
  border-radius: var(--_p-legacy-radius-small, calc(1px + (calc(6px + 2.125ex) / 2)));
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  color: var(--p-color-primary);
  background: var(--p-color-warning-frosted);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), backdrop-filter var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full)) !important;
}
::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media (forced-colors: active) {
  span {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
    background-color: Canvas;
  }
  ::slotted(a:focus-visible)::before, ::slotted(button:focus-visible)::before {
    outline-color: Highlight !important;
  }
}
"
`;
